    Solution: Remove flex and preferred height/width, just set min height/width
Info: Make combat initial prompt last a little longer (1.5 -> 1.75 seconds)
Bug: Arrow not disappearing if info tab is not clicked on final part of tutorial
Bug: Help menu is mad broke yo (update localized values)
Balance: Make bite have a 30% chance to inflict break
Balance: Ravager
    Give claw the ability to inflict break

COOKING
-------
Fix: Make useCandles tutorial appear for the first character that can use candles
Cleanup: Make it so general save data's properties are stored in another gsdata (for organization), so saving gsdata is just replacing the old with the mutable copy
Bug: Animation cutting bug (where monsters end on the last frame of their animation)
Bug: Frost Golem skills should have unique message "Summons don't get skills"
Bug: Empty tooltip bug
Bug: Mage and Archer class select buttons can visually be seen de-whitening when swapping between main menu and class select (BUT NOT WARRIOR OR ROGUE?)
CRITICAL BUG: Going fullscreen causes buttons to offset (this might be a unity bug but need to try)
UI: Make eventDescription show physical/magical damage
UI: Might need to redo all attack animations cause pixel sizing is janky (64x64 to 96x96)
UI: Make clicking another party member in combat show their attacks (but obv they can't do anything)
UI: Hot key item tabs
Options: Bloom option (eughhh)
UI: Add a shader to show champion
UI: Turn reticle and name red if monster is higher level

Monster: Goo (PDEF 1 MDEF 1) (Random, but won't use metabolize if at full health)
    - Body Rush (physical attack, 50% chance to inflict break)
    - Metabolize (Heal and gain Cure for 3 turns) [normal mode only]
Monster: The Grumbled (PDEF 5 MDEF 2) (Random)
    - Enroot: Magical attack that guarantees root
    - Cursed Seeds: Magical attack that damages a character and inflicts rbw
    - Regrow: Heal and gain regenerate for 3 turns  (make AI prevent use of heal if at > 75% health)