@@ -1,0 +1,7 @@
+fileFormatVersion: 2
+guid: fde671bd99cdc4dbdaafb5ece436f196
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
