@@ -72,14 +72,14 @@
 
 		{ "key": "game_over_title", "value": "Game Over" },
 		{ "key": "game_completed_title", "value": "Game Completed" },
-		{ "key": "game_over_GreyWastes0", "value": "You and Flaytz died in a wasteland,\nunable to transport the cure.\nSydra fell four days later." },
+		{ "key": "game_over_GreyWastes0", "value": "You and Flaytz died in a wasteland,\nunable to transport the cure.\nSydra collapsed soon after her majesty's death." },
 		{ "key": "game_over_GreyWastes1", "value": "You and Flaytz died on the road,\nall cold and alone.\nSydra fell four days later." },
-		{ "key": "game_over_GreyWastes2", "value": "You collapsed at the top of a hill,\nbut dying no closer to heaven.\nSydra fell four days later." },
-		{ "key": "game_over_GreyWastes3", "value": "The desert storms erased the road,\nas well as any evidence of your efforts.\nSydra fell four days later." },
-		{ "key": "game_over_GreyWastes4", "value": "The greyhides devour both of you,\nnot wasting a scrap of meat.\nSydra fell four days later." },
-		{ "key": "game_over_GreyWastes5", "value": "Your final moments are spent poorly,\ncrying against a tombstone.\nSydra fell four days later." },
-		{ "key": "game_over_GreyWastes6", "value": "With her last breath Flaytz screamed,\ncursing your final resting place.\nSydra fell four days later." },
-		{ "key": "game_over_GreyWastes7", "value": "The wraith embraces you,\nas it sews your soul into the body of a doll.\nSydra fell four days later." },
+		{ "key": "game_over_GreyWastes2", "value": "You collapsed at the top of a hill,\nbut dying no closer to heaven.\nSydra fell three days later." },
+		{ "key": "game_over_GreyWastes3", "value": "The desert storms erased the road,\nas well as any evidence of your efforts.\nSydra fell two days later." },
+		{ "key": "game_over_GreyWastes4", "value": "The greyhides devour both of you,\nnot wasting a scrap of meat.\nSydra fell one day later." },
+		{ "key": "game_over_GreyWastes5", "value": "Your final moments are spent poorly,\ncrying against a tombstone.\nSydra fell three days later." },
+		{ "key": "game_over_GreyWastes6", "value": "With her last breath Flaytz screamed,\ncursing your final resting place.\nSydra fell two days later." },
+		{ "key": "game_over_GreyWastes7", "value": "The wraith embraces you,\nas it sews your soul into the body of a doll.\nSydra fell one day later." },
 		{ "key": "game_over_GreyWastes8", "value": "The cognac flames stand over you,\nwondering how you could die here.\nA torchbearer found you a moment too late." },
 		{ "key": "game_over_GreyWastes9", "value": "You and Flaytz died without a trace,\nyour efforts gone to waste.\nSydra fell four days later." },
 		{ "key": "game_completed_des", "value": "Holst and Flaytz delivered the cure,\nallowing Sydra to withstand the plague.\nAt least for now." },
@@ -800,7 +800,7 @@
 		{ "key": "dollPouch1_1_res", "value": "You search the area, but to no avail. Flaytz is disappointed.\n\"It's dangerous to be in the same spot for too long. Forget it, lets go.\"" },
 		{ "key": "talkingWraith0_0_res", "value": "\"Hi. Can you help me?\"" },
 		{ "key": "talkingWraith1_0_res", "value": "The little wraith vanishes as you ready to strike." },
-		{ "key": "talkingWraith1_1_res", "value": "Best kill it now before it becomes a wraith." },
+		{ "key": "talkingWraith1_1_res", "value": "Little ghosts are tricksters. Best kill it before it calls its friends." },
 		{ "key": "talkingWraith2_0_res", "value": "\"So many freeze and run when they see me.\nAll I'm looking for is my hat.\"" },
 		{ "key": "talkingWraith3_0_res", "value": "\"You'll help me? Well, some low-life stole my wizard's hat.\nIf you can get it back for me, I'll try to help ya out.\"" },
 		{ "key": "theWraithWizard0_0_res", "value": "\"I -M TH- GR--T-ST! F-TH-R Y-- WI-L B- PR--D!\"" },
