@@ -40,13 +40,19 @@ Bug: Two 4 line notifications on the right squish the lower's text slightly (onl
 Info: Make combat initial prompt last a little longer (1.5 -> 1.75 seconds)
 Bug: Arrow not disappearing if info tab is not clicked on final part of tutorial
 Bug: Help menu is mad broke yo (update localized values)
+Feature: Add break status
 Balance: Make bite have a 30% chance to inflict break
 Balance: Ravager
     Give claw the ability to inflict break
+Fix: Change line about "Kill it before it becomes a wraith"
+Fix: "4 days" now changes depending on subArea (assuming each area is reached in a day)
+Bug: Consumables are worth 0 if they only give status effects
+Fix: Make useCandles tutorial appear for the first character that can use candles
+Bug: Stranglehead art clips into hp bar
+Fix: Change tutorial prog to 80% when its first visible
 
 COOKING
 -------
-Fix: Make useCandles tutorial appear for the first character that can use candles
 Cleanup: Make it so general save data's properties are stored in another gsdata (for organization), so saving gsdata is just replacing the old with the mutable copy
 Bug: Animation cutting bug (where monsters end on the last frame of their animation)
 Bug: Frost Golem skills should have unique message "Summons don't get skills"
@@ -60,6 +66,7 @@ UI: Hot key item tabs
 Options: Bloom option (eughhh)
 UI: Add a shader to show champion
 UI: Turn reticle and name red if monster is higher level
+Verify: See if you can gameover in the tutorial and final areas with Wilting Wintergreen on
 
 Monster: Goo (PDEF 1 MDEF 1) (Random, but won't use metabolize if at full health)
     - Body Rush (physical attack, 50% chance to inflict break)
